# openmp

./: .gitignore  .travis.yml  CMakeLists.txt  circle.yml
libomptarget/: CMakeLists.txt  README.txt  exports
libomptarget/cmake/Modules/: LibomptargetGetDependencies.cmake
libomptarget/deviceRTLs/: CMakeLists.txt
libomptarget/deviceRTLs/jni/: CMakeLists.txt
libomptarget/deviceRTLs/jni/src/: omptarget-jni.c  omptarget-jni.h
libomptarget/deviceRTLs/mpi/: CMakeLists.txt
libomptarget/deviceRTLs/mpi/src/: omptarget-mpi.cpp
libomptarget/deviceRTLs/nvptx/src/: interface.h  task.cu
libomptarget/deviceRTLs/spark/: CMakeLists.txt  build.sbt
libomptarget/deviceRTLs/spark/src/main/scala/org/llvm/openmp/: CloudFileSystem.scala  Util.scala
libomptarget/plugins/: CMakeLists.txt  exports
libomptarget/plugins/alveo/: CMakeLists.txt
libomptarget/plugins/alveo/src/: rtl.cpp
libomptarget/plugins/alveo/src/util/: alveo_generic_app.cpp  alveo_generic_app.h  utils.cpp  utils.h
libomptarget/plugins/awsf1/: CMakeLists.txt
libomptarget/plugins/awsf1/src/: rtl.cpp
libomptarget/plugins/awsf1/src/util/: awsf1_generic_app.cpp  awsf1_generic_app.h  utils.cpp  utils.h
libomptarget/plugins/cloud/: CMakeLists.txt
libomptarget/plugins/cloud/src/: rtl.cpp  rtl.h
libomptarget/plugins/cloud/src/providers/: amazon.cpp  amazon.h  azure.cpp  azure.h  generic.cpp  generic.h  local.cpp  local.h  provider.h
libomptarget/plugins/cloud/src/util/: cloud_compression.cpp  cloud_ssh.cpp  cloud_util.cpp
libomptarget/plugins/common/: elf_common.c
libomptarget/plugins/cuda/src/: rtl.cpp
libomptarget/plugins/generic-elf-64bit/src/: rtl.cpp
libomptarget/plugins/harp/: CMakeLists.txt
libomptarget/plugins/harp/src/: rtl.cpp
libomptarget/plugins/harp/src/util/: opae_generic_app.cpp  opae_generic_app.h
libomptarget/plugins/harpsim/: CMakeLists.txt
libomptarget/plugins/harpsim/src/: rtl.cpp
libomptarget/plugins/harpsim/src/util/: opae_generic_app.cpp  opae_generic_app.h
libomptarget/plugins/mpi/: CMakeLists.txt
libomptarget/plugins/mpi/src/: rtl.cpp
libomptarget/plugins/opencl/: CMakeLists.txt
libomptarget/plugins/opencl/src/: rtl.cpp
libomptarget/plugins/smartnic/: CMakeLists.txt
libomptarget/plugins/smartnic/src/: rtl.cpp
libomptarget/plugins/x86_64/: CMakeLists.txt
libomptarget/src/: omptarget.cpp  omptarget.h  omptargetplugin.h
offload/src/: offload_omp_host.cpp  offload_omp_target.cpp
runtime/: CMakeLists.txt
runtime/src/: dllexports  kmp.h  kmp_barrier.cpp  kmp_csupport.cpp  kmp_debug.h  kmp_gsupport.cpp  kmp_runtime.cpp  kmp_taskdeps.cpp  kmp_tasking.cpp  kmp_wait_release.cpp  kmp_wait_release.h  z_Linux_util.cpp
